<resources>
    <string name="app_name">云联乐购</string>
    <string name="yunlian_memberid">云联惠</string>
    <string name="loading">请稍候&#8230;</string>
    <string name="app_upgrade_download_sucess">新版本下载成功,开始安装.</string>
    <string name="app_upgrade_download_fail">新版本下载失败，请稍后再试.</string>
    <string name="telphone">手机号码</string>
    <string name="login">登         录</string>
    <string name="find_pwd">忘记密码</string>
    <string name="error_phone">请输入手机号码！</string>
    <string name="error_reservationnumber">请输入预留号码！</string>
    <string name="error_bank">请选择要开户的银行</string>
    <string name="error_oil">请选择要充卡的类型</string>
    <string name="error_card">请填写银行卡号</string>
    <string name="error_oilcard">请填写油卡卡号</string>
    <string name="error_person">请填写开户人姓名</string>
    <string name="error_oil_person">填写油卡用户姓名</string>
    <string name="error_phone_input">手机号码输入错误！</string>
    <string name="error_id_input">推荐人ID|手机号输入错误</string>
    <string name="error_sign_empty">签名为空！</string>
    <string name="error_pay_input">金额输入错误！</string>
    <string name="error_format_pay_input">金额输入格式错误！</string>
    <string name="error_pay_input_max">金额不能超过可提现的金额</string>
    <string name="error_phone_get">获取不到手机号码！</string>
    <string name="forbid_shop_modify_name">商家不允许修改昵称，需要修改请联系乐购客服！</string>
    <string name="error_localtion_store">商店的位置不正确，导航失败</string>
    <string name="error_localtion_current">定位不到当前位置，导航失败</string>
    <string name="error_pwd">请输入密码！</string>
    <string name="error_store">请输入店名！</string>
    <string name="error_pwd_match">两次密码输入不一致！</string>
    <string name="error_pwd_length">请输入六位数字密码</string>
    <string name="error_pwd_length1">密码长度不能少于6个字符</string>
    <string name="error_pwd_zero">支付密码不能以0开头</string>
    <string name="error_pwd_length2">密码长度不能超过18个字符</string>
    <string name="error_oldpwd_length1">旧密码长度不能少于6个字符</string>
    <string name="error_oldpwd_length2">旧密码长度不能超过18个字符</string>
    <string name="error_newpwd_length1">新密码长度不能少于6个字符</string>
    <string name="error_newpwd_length2">新密码长度不能超过18个字符</string>
    <string name="error_pwd_expr">密码只能是字母和数字</string>
    <string name="error_pwd_old">请输入旧密码！</string>
    <string name="forget_pwd_reset">设置新的密码</string>
    <string name="input_subject">请选择您需要的科目</string>
    <string name="input_teacher_class">请选择您需要的老师类型</string>
    <string name="input_serve_class">请选择您需要的服务类型</string>
    <string name="input_chef_class">请选择您需要的厨师类型</string>
    <string name="error_confirmpwd_new">请再次输入新密码！</string>
    <string name="error_pwd_new">请输入新密码！</string>
    <string name="error_no_result">没有返回结果</string>
    <string name="error_no_log">没有记录</string>
    <string name="error_no_shop">没有商家</string>
    <string name="error_no_bank">您还没绑定银行卡哦</string>
    <string name="error_no_oilcard">您还没绑定油卡哦</string>
    <string name="lable_pay_infomation">您向</string>
    <string name="error_transto_success">转到消费钱包成功</string>
    <string name="error_pay_charge">充值成功</string>
    <string name="label_pay_oilcard_charge">充卡成功</string>
    <string name="check_new_version">发现新版本</string>
    <string name="check_new_version_title">检查新版本</string>
    <string name="check_new_version_message">正在获取新版本信息 ....</string>
    <string name="check_new_version_no_network">未找到网络连接，请设置后重试!</string>
    <string name="check_new_version_null">未找到新版本信息，请稍后再试!</string>
    <string name="check_new_version_exception">获取新版本信息出错，请稍后再试!</string>
    <string name="check_new_version_latest">已经是最新版本!</string>
    <string name="error_wmaidian">不可以在自己的店下单</string>
    <string name="label_btn_confirm">确定</string>
    <string name="label_modify_confirm">确定修改</string>
    <string name="label_storename">您的店名</string>
    <string name="label_btn_submit">提交</string>
    <string name="label_title_result_search">搜索结果</string>
    <string name="label_title_hot_search">热门搜索</string>
    <string name="label_title_history_search">历史搜索</string>
    <string name="label_lazy_staff">懒人员工</string>
    <string name="label_my_favorite">我的收藏</string>
    <string name="label_lazy_info">账户信息</string>
    <string name="label_lazy_myreferee">我的推荐</string>
    <string name="label_lazy_myreferee2">乐粉好友</string>
    <string name="label_my_wallet">我的钱包</string>
    <string name="label_my_pay">向商家支付</string>
    <string name="title_become_staff">升级创业会员</string>
    <string name="label_transmoney">转为消费资金</string>
    <string name="label_my_wallet_log">钱包明细</string>
    <string name="label_my_wallet_log_1">账单明细</string>
    <string name="label_my_wallet_log0">收入明细</string>
    <string name="label_my_wallet_log1">消费明细</string>
    <string name="label_my_wallet_log2">充值明细</string>
    <string name="label_my_wallet_petrochina">中石油油卡充值明细</string>
    <string name="label_my_wallet_sinopec">中石化油卡充值明细</string>
    <string name="label_my_wallet_oilcard">油卡充值明细</string>
    <string name="label_my_wallet_log3">提现明细</string>
    <string name="label_my_wallet_log4">转钱包明细</string>
    <string name="label_my_wallet_log5">中石油充值明细</string>
    <string name="label_my_wallet_log6">中石化充值明细</string>
    <string name="label_shop_wallet">商家钱包</string>
    <string name="label_my_order">订单记录</string>
    <string name="label_my_paylog">我的账单</string>
    <string name="label_favorite_log">收藏记录</string>
    <string name="label_error_store_id">商店没有Id</string>
    <string name="favorite_success">收藏成功</string>
    <string name="del_favorite_success">取消收藏</string>
    <string name="label_feedback">建议反馈</string>
    <string name="feedback_empty">建议反馈信息不能为空</string>
    <string name="feedback_success">感谢您的反馈！</string>
    <string name="feedback_faild">建议反馈信息不能为空</string>
    <string name="label_setting">设置</string>
    <string name="label_about">关于我们</string>
    <string name="label_pay_passsword">支付密码</string>
    <string name="label_btn_pay">支付</string>
    <string name="label_btn_paying">支付中...</string>
    <string name="label_pay_success">支付成功</string>
    <string name="label_pay_error_self">自己不能给自己支付</string>
    <string name="label_btn_login">马上登录</string>
    <string name="label_no_login">您还没登录哦!</string>
    <string name="label_login_invalid">登录失效，请重新登录</string>
    <string name="label_lazy_score">懒人好评</string>
    <string name="label_lazy_staff_score">员工好评</string>
    <string name="label_lazy_staff_tixian">提现</string>
    <string name="label_income_log">收入记录</string>
    <string name="label_recharge_log">充值记录</string>
    <string name="label_sinopec_recharge_log">中石化充值记录</string>
    <string name="label_petrochina_recharge_log">中石油充值记录</string>
    <string name="label_pay_log">消费记录</string>
    <string name="label_cash_log">提现记录</string>
    <string name="label_cash_apply">提现申请</string>
    <string name="label_transcode_log">转消费记录</string>
    <string name="label_mybankcardlist">我的银行卡</string>
    <string name="label_banklist">银行列表</string>
    <string name="label_add">增加</string>
    <string name="label_addbankcard">增加银行卡</string>
    <string name="label_addoilcard">增加油卡</string>
    <string name="label_upgrade_success">恭喜您，升级成为创业会员</string>
    <string name="label_supportbanklist">支持银行：招商、工商、建设、中行、农业、民生、中信、交通、兴业等银行</string>
    <string name="label_become_staff_explain">升级为创业会员，在乐购平台享有经营权，成为乐购商家。 \n更多创业会员特权，详细与客服联系。\n\n若你有实体商铺，请填好资料，升级后联系乐购工作人员，开通乐购商铺功能。\n\n乐购客服电话：0763-3117738 3117768\n联系人：梁小姐 13622937761 许小姐：13413531641 李生：13926667774</string>
    <string name="label_bankcard">*银行卡号</string>
    <string name="label_oilcard">*油卡卡号</string>
    <string name="label_oilcard_name">*持卡人姓名</string>
    <string name="label_mobile">*手机号码</string>
    <string name="label_select_bank">*开户行</string>
    <string name="label_select_oil">*油卡类型</string>
    <string name="label_select_bankcard">选择要提现的银行卡</string>
    <string name="label_select_person">*开户人(必须是商店的法人)</string>
    <string name="label_cash_money">账户可提现余额:</string>
    <string name="label_transto_money">账户可转消费金额:</string>
    <string name="label_lazy_staff_chongzhi">充值</string>
    <string name="label_lazy_oil_chongzhi">油卡充值</string>
    <string name="label_transcode_wellat">转消费</string>
    <string name="label_lazy_staff_detail">最近30天收支明细</string>
    <string name="label_lazy_staff_cunruwallet">已存入钱包</string>
    <string name="tips_not_found_industry">没有找到您要查找的行业?</string>
    <string name="title_my_detail_info">我的资料</string>
    <string name="label_modify_avatar">修改头像   </string>
    <string name="label_my_nickname">我的昵称</string>
    <string name="label_bandquickkname">账号绑定</string>
    <string name="str_my_mobile">我的手机</string>
    <string name="str_my_weixin">微信</string>
    <string name="str_my_qq">QQ</string>
    <string name="str_my_myaddress">我的地址</string>
    <string name="str_my_pwd">安全设置</string>
    <string name="str_no_band">未绑定</string>
    <string name="str_band_mobile">绑定手机</string>
    <string name="label_my_address">我的地址</string>
    <string name="label_modify_password">登录密码</string>
    <string name="label_modify_pay_pwd">支付密码</string>
    <string name="label_modify_setpay_pwd">请输入您的支付密码</string>
    <string name="btn_logout">退出登录</string>
    <string name="label_logouted">您已注销</string>
    <string name="label_my_name">用户名</string>
    <string name="title_receive_address">服务地址</string>
    <string name="label_storename_address">服务地址(非必填)</string>
    <string name="label_longitude">经度(非必填)</string>
    <string name="label_latitude">纬度(非必填)</string>
    <string name="title_input_serve_address">请选择您的服务地址</string>
    <string name="btn_new_address">新建地址</string>
    <string name="title_new_receive_address">新建收货地址</string>
    <string name="label_contact_name">联系人</string>
    <string name="label_receive_address">收货地址</string>
    <string name="label_detail_address">详细地址</string>
    <string name="hint_your_name">你的名字</string>
    <string name="hint_your_telephone">你的手机号码</string>
    <string name="hint_your_area">请选择你的地区</string>
    <string name="hint_your_detail_address">请填写详细地址</string>
    <string name="hint_set_default_address">设置为默认地址</string>
    <string name="btn_save_address">保存地址</string>
    <string name="title_modify_receive_address">修改收货地址</string>
    <string name="label_complete">完成</string>
    <string name="error_contact_name">请输入联系人姓名！</string>
    <string name="error_contact_telephone">请输入联系人手机号！</string>
    <string name="error_input_your_area">请选择你的地区！</string>
    <string name="error_your_detail_address">请输入你的详细地址！</string>
    <string name="sms_name">请输入验证码！</string>
    <string name="sms_name_length1">验证码长度不能少于4个字符</string>
    <string name="sms_name_expr">验证码只能是字母和数字</string>
    <string name="btn_send_verification_code">发送验证码</string>
    <string name="send_verification_code_success">验证码已发送</string>
    <string name="hint_please_confirm_code">请输入验证码</string>
    <string name="hint_please_refereeid">推荐人ID|手机号(非必填)</string>
    <string name="btn_login">登录</string>
    <string name="label_copyright">Copyright @2006-2017</string>
    <string name="label_company">清远云联惠电子商务有限公司</string>
    <string name="label_about_explain">清远云联惠电子商务有限公司于2016年4月筹备，于2017年正式注册，是一家依托大数据云计算、集重组线下消费资源，并携手云联商业大系统打造出结合线上线下消费为基础的第三方电子商务运营公司.整合各方资源，融入云联消费资本论而推出云联乐购电子商务平台。乐购以秉承云联惠大爱精神，为客牟利、促进销售、培养行业领袖、传递财富、传承共赢、传播事业博爱为宗旨。坚持国家政策为导向，以共享经济时代为背景下，积极响应‘互联网+’行动计划。致力构建消费模式体系中枢，而实现商家与消费者互通互赢局面。让传统商家摆脱经营难、让消费者敢消费实现无压力而快乐消费。</string>
    <string name="hint_your_telephone_number">你的手机号</string>
    <string name="hint_please_input_pwd">请输入密码</string>
    <string name="hint_input_your_transtomonety">转到消费钱包的金额</string>
    <string name="hint_fill_apply_staff">尊敬的用户：您还没绑定手机！根据国家规定，手机用户在使用手机产品需要实名制认证，请先必须绑定手机完成实名制认证！</string>
    <string name="label_urgent_telephone">联系人手机</string>
    <string name="label_idcard_num">身份证号</string>
</resources>