<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/include_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/label_contact_name"
            android:textColor="@color/black_light"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/et_contact_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="5dip"
            android:gravity="center_vertical"
            android:hint="@string/hint_your_name"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/TextColorBlack"
            android:textColorHint="@color/hint_gray"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/split_line"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/telphone"
            android:textColor="@color/black_light"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/et_telphone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="5dip"
            android:gravity="center_vertical"
            android:hint="@string/hint_your_telephone"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/TextColorBlack"
            android:textColorHint="@color/hint_gray"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/split_line"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/label_receive_address"
            android:textColor="@color/black_light"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_receive_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="5dip"
            android:gravity="center_vertical"
            android:hint="@string/hint_your_area"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/TextColorBlack"
            android:textColorHint="@color/hint_gray"
            android:textSize="15sp"
            android:drawableRight="@drawable/forward"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/split_line"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/label_detail_address"
            android:textColor="@color/black_light"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/et_detail_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="5dip"
            android:gravity="center_vertical"
            android:hint="@string/hint_your_detail_address"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/TextColorBlack"
            android:textColorHint="@color/hint_gray"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/split_line"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal"
        android:layout_gravity="left">

        <CheckBox
            android:id="@+id/cb_set_default_address"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            style="@style/CheckboxDefaultAddrTheme"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/hint_set_default_address"
            android:textSize="11sp"
            android:textColor="@color/hint_gray"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/selector_button_orange"
        android:text="@string/btn_save_address"
        android:textColor="@color/white"
        android:textSize="16sp"/>
</LinearLayout>