<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <include
        layout="@layout/include_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_transto_money"
                    android:textColor="@color/black_light"
                    android:textSize="18sp"
                    android:id="@+id/tv_money" />
            </LinearLayout>

            <EditText
                android:layout_marginTop="2dp"
                android:id="@+id/edit_pay_money"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#FFFFFF"
                android:gravity="left"
                android:hint="@string/hint_input_your_transtomonety"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="@color/TextColorBlack"
                android:textColorHint="@color/hint_gray"
                android:textSize="20sp" />


            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/hint_please_input_pwd"
                android:inputType="textPassword"
                android:maxLength="18"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/TextColorBlack"
                android:textColorHint="@color/hint_gray"
                android:textSize="20sp">
            </EditText>
            <Button
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/selector_button_orange"
                android:text="@string/label_btn_confirm"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>

</LinearLayout>


















