<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <include
        layout="@layout/include_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_telphone"
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/icon_phone"
            android:drawablePadding="@dimen/margin_20"
            android:gravity="center_vertical"
            android:hint="@string/hint_your_telephone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/TextColorBlack"
            android:textColorHint="@color/hint_gray"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/split_line"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_verification"
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:layout_marginLeft="5dip"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/icon_verification"
            android:drawablePadding="@dimen/margin_20"
            android:gravity="center_vertical"
            android:hint="@string/hint_please_confirm_code"
            android:maxLength="18"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/TextColorBlack"
            android:textColorHint="@color/hint_gray"
            android:textSize="15sp"></EditText>

        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:background="@drawable/button_selector_oranger_white"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/btn_send_verification_code"
            android:textColor="@color/bg_sec_oranger"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/split_line"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_text_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/hint_fill_apply_staff"

            android:textColor="@color/selector_select_login_reg"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/split_line"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button_orange"
        android:text="@string/label_btn_confirm"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>